# findevil

./: .env.example  .gitignore  ACCURACY.md  ARCHITECTURE.md  DATASETS.md  DEPLOYMENT.md  LICENSE  PROGRESS.md  README.md  config.yaml  main.py  mcp_config.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
agent/: __init__.py  audit.py  iabf.py  llm_client.py
datasets/hacking_case/: SHA256SUMS
deploy/: install.sh
docs/bpmn/: findevil_iabf_workflow.bpmn  legacy_dfir_workflow.bpmn
docs/devpost/: SUBMISSION.md
docs/video/: README.md  RECORDING.md  obs_scene.json  storyboard.md
logs/archived/: session_032d0c99.jsonl  session_0554644b.jsonl  session_0881af83.jsonl  session_0b5562d7.jsonl  session_0f269b23.jsonl  session_19059f02.jsonl  session_237c41c4.jsonl  session_24e2e1c2.jsonl  session_365a3cc3.jsonl  session_383e89e0.jsonl  session_43722aa8.jsonl  session_43f5739f.jsonl  session_4bf1b09a.jsonl  session_4c0e814e.jsonl  session_56f9016e.jsonl  session_5bb2e527.jsonl  session_5e4bbaa7.jsonl  session_6fa19824.jsonl  session_730a29c9.jsonl  session_7e16c508.jsonl  session_84d8c884.jsonl  session_8c91685e.jsonl  session_90568c83.jsonl  (+20 more)
mcp_server/: __init__.py  guardrails.py  server.py
reports/: hacking_case_iabf_score.json  hacking_case_naive.json  hacking_case_naive_score.json  hacking_case_run11.json  hacking_case_run11_score.json  hacking_case_run7.json  hacking_case_run8.json  hacking_case_run8_score.json
scripts/: demo.sh  naive_baseline.py  score.py
tests/: test_audit.py  test_guardrails.py  test_iabf_phases.py  test_llm_client.py
(+2 files in other folders)
